--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   provider: ^6.1.2
+  async_wallpaper: ^2.0.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
